--- a/cv.tex
+++ b/cv.tex
@@ -1,198 +1,109 @@
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
-%	The MIT License (MIT)
-%
-%	Copyright (c) 2021 Jitin Nair
-%
-%	Permission is hereby granted, free of charge, to any person obtaining a copy
-%	of this software and associated documentation files (the "Software"), to deal
-%	in the Software without restriction, including without limitation the rights
-%	to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-%	copies of the Software, and to permit persons to whom the Software is
-%	furnished to do so, subject to the following conditions:
-%	
-%	THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-%	IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-%	FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-%	AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-%	LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-%	OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-%	THE SOFTWARE.
-%	
-%
-%-----------------------------------------------------------------------------------------------------------------------------------------------%
+---
+# Language (Optional)
+lang: en
+# Site Keywords & Description
+keywords: Resume, zhuwenq,
+description: This is zhuwenq's personal resume.
+# Resume Title
+resume_title: zhuwenq's Resume
+# Job Applicant Name
+name: zhuwenq
+avatar: https://raw.githubusercontent.com/Leonezz/privateHosting/master/Leonezz.github.io.png
+# Contact
+contact:
+  # Email
+  - icon: fas fa-envelope
+    text: Email
+    url: mailto:zhuwenqa@outlook.com
+  # Telegram
+  - icon: fas fa-paper-plane
+    text: Telegram
+    url: https://t.me/ppingzi
+  # Github
+  - icon: fab fa-github
+    text: Github
+    url: https://github.com/leonezz
+  # Blog
+  - icon: fad fa-blog
+    text: Blog
+    url: https://zhuwenq-blog.netlify.app
+  # URL
+  - icon: fas fa-globe-europe
+    text: https://zhuwenq-resume.netlify.app
+    url: https://zhuwenq-resume.netlify.app
+  # Phone Number
+#  - icon: fas fa-phone-alt
+#    text: 
+#    url: tel:10086
+# PDF Download Link
+download:
+  - title: Full
+    icon: fas fa-download fa-fw
+    url: https://github.com/leonezz
 
-%----------------------------------------------------------------------------------------
-%	DOCUMENT DEFINITION
-%----------------------------------------------------------------------------------------
+  - title: Simple
+    icon: fas fa-download fa-fw
+    url: https://github.com/leonezz
+---
 
-% article class because we want to fully customize the page and not use a cv template
-\documentclass[a4paper,12pt]{article}
+{% raw %}
+<center>
+<a href='/'>English</a> | <a href='/zh-cn/'>简体中文</a>
+</center>
+{% endraw %}
 
-%----------------------------------------------------------------------------------------
-%	FONT
-%----------------------------------------------------------------------------------------
+## Intro
 
-% % fontspec allows you to use TTF/OTF fonts directly
-% \usepackage{fontspec}
-% \defaultfontfeatures{Ligatures=TeX}
+I am currently a postgraduate major in computer science, my research interests include Natural Language Processing, Parameter Efficient Transfer Learning and Information Extraction. Before my postgraduate's study, I graduate from the optical major of physics faculty.
+In addition to my academic study, I am a person of wide interests, my interests include modern C++, embedded systems, advanced deep learning technics, reading books, photography and making coffee.
+Contact me through:
+- Email: [zhuwenqa@outlook.com](mailto:zhuwenqa@outlook.com)
+- Telegram: [ppingzi](https://t.me/ppingzi)
+- Github: [leonezz](https://github.com/leonezz)
 
-% % modified for ShareLaTeX use
-% \setmainfont[
-% SmallCapsFont = Fontin-SmallCaps.otf,
-% BoldFont = Fontin-Bold.otf,
-% ItalicFont = Fontin-Italic.otf
-% ]
-% {Fontin.otf}
+## Education experience
 
-%----------------------------------------------------------------------------------------
-%	PACKAGES
-%----------------------------------------------------------------------------------------
-\usepackage{url}
-\usepackage{parskip} 	
+- **Bachelor's degree** at **NUAA** major in *Optoelectronic Information Science and Engineering*, 2017 - 2021.
+- **Master's degree** at **NUAA** major in *Computer Science and Technology*, 2021 - present.
 
-%other packages for formatting
-\RequirePackage{color}
-\RequirePackage{graphicx}
-\usepackage[usenames,dvipsnames]{xcolor}
-\usepackage[scale=0.9]{geometry}
+## Project experience
 
-%tabularx environment
-\usepackage{tabularx}
+### A Measuring System of Metal Surface Flatness Based on Electromagnetic Induction Principle
+#### 2018.9 ~ 2018.11: Creator and maintainer.
 
-%for lists within experience section
-\usepackage{enumitem}
+- This project is supported by the NUAA Innovation and Entrepreneurship Program.
+- We designed a tiny PCB coil in this project as the electromagnetic sensor and power this sensor with a dedicated chip.
+- The dedicated chip collect the electromagnetic impedance value between the coil sensor and the surface of the object to be tested, and encode the value into digital data.
+- We collect the data that represents the impedance (i.e. the distance between sensor and the surface to be tested) with various distances, and then fit the impedance-distance value pairs with the well-known Least Square Estimation Algorithm into a polynomial function, with which we can calculate distance from a impedance data.
+- Also note this system is implemented with a 2-axis moving platform powered by G-code thus it is able to scan a surface automatically.
 
-% centered version of 'X' col. type
-\newcolumntype{C}{>{\centering\arraybackslash}X} 
+### [OpenChart](https://github.com/leonezz/OpenChart.git)
+#### 2019.6 ~ 2019.12: Creator and maintainer.
 
-%to prevent spillover of tabular into next pages
-\usepackage{supertabular}
-\usepackage{tabularx}
-\newlength{\fullcollw}
-\setlength{\fullcollw}{0.47\textwidth}
+- This is a personal project for charts making from data cheats, the aim of this project is to learn the programing pattern of Qt.
+- In this project, I designed a Web-based chart visualization page for charts rendering (ECharts is used to make charts), and a QWebEngine is utilized to load the page and execute the scripts.
+- For data transferring between the Qt/C++ end and the HTML/javascript end, I setted a socket server with QWebSocketServer at the Qt/C++ end and built a brige with QWebChannel to establish a connection.
+- During this project, I learned the usages of basic Qt widgets and the powerfull C++ libraries provided by Qt, as well as style customization techniques including CSS.
+- I also learned the multi-thread programing patterns during this project. To be specific, I utilize multi-threading to load data files in another thread such that the UI thread dose not stuck.
 
-%custom \section
-\usepackage{titlesec}				
-\usepackage{multicol}
-\usepackage{multirow}
+### A smart trash bin based on embedded systems
+#### 2020.12 ~ 2021-5: Creator and maintainer.
 
-%CV Sections inspired by: 
-%http://stefano.italians.nl/archives/26
-\titleformat{\section}{\Large\scshape\raggedright}{}{0em}{}[\titlerule]
-\titlespacing{\section}{0pt}{10pt}{10pt}
+- In this project, I designed both the hardware and the software of an embedded system for a smart trash bin.
+- For the hardware part, I designed a core board for STM32F103RET6 MCU and a driver board for over 6 sensors and 1 executor as well as the MODBUS interface for data transferring. To summarize, 5 U(S)ART and 1 ADC of the MCU are utilized.
+- For the software part, I adapted a MODBUS slave protocol stack implementation to the MCU platform as the communication interface for interaction between MCUs and between MCU and PC, and I implemented all the drivers for the sensors and executor based on the STM32 HAL code base.
 
-%for publications
-\usepackage[style=authoryear,sorting=ynt, maxbibnames=2]{biblatex}
+## Publication
+### FETL: Fusing Layer Representations for More Efficient Transfer Learning in NLP. *zhuwenq*. under review.
 
-%Setup hyperref package, and colours for links
-\usepackage[unicode, draft=false]{hyperref}
-\definecolor{linkcolour}{rgb}{0,0.2,0.6}
-\hypersetup{colorlinks,breaklinks,urlcolor=linkcolour,linkcolor=linkcolour}
-\addbibresource{citations.bib}
-\setlength\bibitemsep{1em}
+- Following the nascent research area of Parameter Efficient Transfer Learning (PETL), we designed a simple yet effective architecture for PETL in NLP.
+- Inspired by the concepts of that knowledge about diverse aspects of language is embedded in different layers of PLM, and that not all of the knowledge is needed for a specific task, we propose to combine the representations from all PLM layers explicitly and individually with a attention-based fusion layer for a better transferring.
+- Our network works outside the PLM as a side-network, thus the backpropagation path does not involve the PLM with our method. Hence the training speed and training GPU memory usage are significantly better with our method than with other PETL methods.
+- Experiments on both low-resource and high-resource scenarios of the GLUE benchmark show that our method achieves promising results with negligible costs.
+- We also try to interpret the inner effects of the proposed fusion layer by analyzing the layer attention vectors task-wisely and token-wisely.
 
-%for social icons
-\usepackage{fontawesome5}
+## Skills
 
-%debug page outer frames
-%\usepackage{showframe}
-
-%----------------------------------------------------------------------------------------
-%	BEGIN DOCUMENT
-%----------------------------------------------------------------------------------------
-\begin{document}
-
-% non-numbered pages
-\pagestyle{empty} 
-
-%----------------------------------------------------------------------------------------
-%	TITLE
-%----------------------------------------------------------------------------------------
-
-% \begin{tabularx}{\linewidth}{ @{}X X@{} }
-% \huge{Your Name}\vspace{2pt} & \hfill \emoji{incoming-envelope} email@email.com \\
-% \raisebox{-0.05\height}\faGithub\ username \ | \
-% \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
-% \end{tabularx}
-
-\begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{Your Name} \\[7.5pt]
-\href{https://github.com/username}{\raisebox{-0.05\height}\faGithub\ username} \ $|$ \ 
-\href{https://linkedin.com/in/username}{\raisebox{-0.05\height}\faLinkedin\ username} \ $|$ \ 
-\href{https://mysite.com}{\raisebox{-0.05\height}\faGlobe \ mysite.com} \ $|$ \ 
-\href{mailto:email@mysite.com}{\raisebox{-0.05\height}\faEnvelope \ email@mysite.com} \ $|$ \ 
-\href{tel:+000000000000}{\raisebox{-0.05\height}\faMobile \ +00.00.000.000} \\
-\end{tabularx}
-
-%----------------------------------------------------------------------------------------
-% EXPERIENCE SECTIONS
-%----------------------------------------------------------------------------------------
-
-%Interests/ Keywords/ Summary
-\section{Summary}
-This CV is automatically generated and deployed using the \href{https://github.com/jitinnair1/autoCV}{autoCV} template along with GitHub Actions such that a new version of the CV is compiled, published and ready for use when the cv.tex file is updated. For details, \href{https://github.com/jitinnair1/autoCV}{click here}.
-
-%Experience
-\section{Work Experience}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Jan 2021 - present \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-\end{tabularx}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Designation} & \hfill Mar 2019 - Jan 2021 \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{
-\begin{minipage}[t]{\linewidth}
-    \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[--] long long line of blah blah that will wrap when the table fills the column width
-        \item[--] again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah. again, long long line of blah blah that will wrap when the table fills the column width but this time even more long long line of blah blah
-    \end{itemize}
-    \end{minipage}
-}
-\end{tabularx}
-
-%Projects
-\section{Projects}
-
-\begin{tabularx}{\linewidth}{ @{}l r@{} }
-\textbf{Some Project} & \hfill \href{https://some-link.com}{Link to Demo} \\[3.75pt]
-\multicolumn{2}{@{}X@{}}{long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width long long line of blah blah that will wrap when the table fills the column width}  \\
-\end{tabularx}
-
-%----------------------------------------------------------------------------------------
-%	EDUCATION
-%----------------------------------------------------------------------------------------
-\section{Education}
-\begin{tabularx}{\linewidth}{@{}l X@{}}	
-2030 - present & PhD (Subject) at \textbf{University} \hfill \normalsize (GPA: 4.0/4.0) \\
-
-2023 - 2027 & Bachelor's Degree at \textbf{College} \hfill (GPA: 4.0/4.0) \\ 
-
-2022 & Class 12th Some Board \hfill  (Grades) \\
-
-2021 & Class 10th Some Board \hfill  (Grades) \\
-\end{tabularx}
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS
-%----------------------------------------------------------------------------------------
-\section{Publications}
-\begin{refsection}[citations.bib]
-\nocite{*}
-\printbibliography[heading=none]
-\end{refsection}
-
-%----------------------------------------------------------------------------------------
-%	SKILLS
-%----------------------------------------------------------------------------------------
-\section{Skills}
-\begin{tabularx}{\linewidth}{@{}l X@{}}
-Some Skills &  \normalsize{This, That, Some of this and that etc.}\\
-Some More Skills  &  \normalsize{Also some more of this, Some more that, And some of this and that etc.}\\  
-\end{tabularx}
-
-\vfill
-\center{\footnotesize Last updated: \today}
-
-\end{document}
+- C++ programing language, Qt, and modern C++.
+- Deep learning and NLP, transformer models especially.
+- Python programing language and pytorch, tensorflow, jax.
