--- a/cv.tex
+++ b/cv.tex
@@ -118,7 +118,7 @@
 \begin{tabularx}{\linewidth}{@{} C @{}}
 \Huge{zhuwenq} \\[7.5pt]
 \href{https://github.com/leonezz}{\raisebox{-0.05\height}\faGithub\ Leonezz} \ $|$ \ 
-\href{https://t.me/ppingzi}{\raisebox{-0.05\height}\faLinkedin\ ppingzi} \ $|$ \ 
+\href{https://t.me/ppingzi}{\raisebox{-0.05\height}\faTelegramPlane\ ppingzi} \ $|$ \ 
 \href{https://zhuwenq-blog.netlify.app}{\raisebox{-0.05\height}\faGlobe \ Blog} \ $|$ \ 
 \href{mailto:zhuwenqa@outlook.com}{\raisebox{-0.05\height}\faEnvelope \ zhuwenqa@outlook.com} \ $|$ \ 
 \href{tel:+8618551713651}{\raisebox{-0.05\height}\faMobile \ +86 18551713651} \\
