--- a/cv-one-page.tex
+++ b/cv-one-page.tex
@@ -145,7 +145,7 @@
 \signed{Sept. 2018 - Nov. 2018}\\[3.75pt]
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[-] We designed a tiny PCB coil in this project as the electromagnetic sensor and power this sensor with a dedicated chip.
+        \item[-] We designed a tiny PCB coil as an electromagnetic sensor and power it with a dedicated IC.
         \item[-] The dedicated chip collect the electromagnetic impedance value between the coil sensor and the surface of the object
         to be tested, and encode the value into digital data.
         \item[-] Also note this system is implemented with a 2-axis moving platform powered by G-code thus it is able to scan a surface automatically.
@@ -172,9 +172,9 @@
     \signed{Dec. 2020 - May 2021} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-            \item[-] In this project, I designed both the hardware and the software of an embedded system for a smart trash bin.
+            \item[-] I designed both the hardware and the software of an embedded system for a smart trash bin.
             \item[-] For the hardware part, I designed a core board for STM32F103RET6 MCU and a driver board for over 6 sensors
-            and 1 executor as well as the MODBUS interface for data transferring. To summarize, 5 U(S)ART and 1 ADC of the MCU are utilized.
+            and 1 executor as well as the MODBUS interface for data transferring.
             \item[-] For the software part, I adapted a MODBUS slave protocol stack implementation to the MCU platform as the communication
             interface for interaction between MCUs and between MCU and PC, and I implemented all the drivers for the sensors and executor
             based on the STM32 HAL code base.
@@ -185,7 +185,17 @@
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
-
+\section{Internship}
+\begin{tabularx}{\linewidth}{ @{}X@{} }
+    \textbf{Nanjing Xunxing Electronic Technology Co., Ltd.}
+    \signed{Jun. 2020 - Aug. 2020} \\[3.75pt]
+    \begin{minipage}[t]{\linewidth}
+        \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+            \item[-] Participate in the development of embedded Linux software for the physical experiment equipment (a thermodynamic parameter tester)
+            \item[-] I developed the drive and interaction software for the embedded equipment with the Qt framework.
+        \end{itemize}
+        \end{minipage}
+\end{tabularx}
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS
 %----------------------------------------------------------------------------------------
@@ -202,10 +212,8 @@
 \begin{tabularx}{\linewidth}{@{}l}
 \begin{minipage}[t]{\linewidth}
 \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-    \item[-] C++ programing language, Qt, and modern C++.
-    \item[-] Deep learning and NLP, transformer models especially.
-    \item[-] Python programing language and pytorch, tensorflow, jax, pandas, matplotlib, et.al.
-    \item[-] Master the theoretical basis of computers, the underlying principles of computers and a good foundation of algorithms and data structures.
+    \item[-] Modern C++, Python, Qt and embedded systems.
+    \item[-] Master the theoretical basis of computer science, the underlying principles of computers and a good foundation of algorithms and data structures.
     \item[-] Possess good documentation and engineering practice habits, and are willing to cooperate, communicate and discuss with others.
 \end{itemize}
 \end{minipage}
