--- a/cv.tex
+++ b/cv.tex
@@ -235,18 +235,31 @@ In addition to my academic study, I am a person of wide interests, my interests 
 %\nocite{*}
 %\printbibliography[heading=none]
 %\end{refsection}
-
+\section{Internship}
+\begin{tabularx}{\linewidth}{ @{}X@{} }
+    \textbf{Nanjing Xunxing Electronic Technology Co., Ltd.}
+    \signed{Jun. 2020 - Aug. 2020} \\[3.75pt]
+    \begin{minipage}[t]{\linewidth}
+        \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+            \item[-] Participate in the development of embedded Linux software for the company's physical experiment equipment (a thermodynamic parameter tester), and I analyze software requirements with my physical knowledge.
+            \item[-] I developed the driver and interactive software for the embedded equipment with the Qt framework, in which I implemented the functions of temperature sensor data reading and the heater controling through serial ports. A simple data analysis function based on the least square estimation algorithm is also implemented.
+            \item[-] The software is finally deployed to the ARM device running the Ubuntu operating system. Since the device hardware has already been assembled, data can only be transferred to it through a USB drive. I wrote a deployment tool for code compilation and setting the software as the startup item with shell script.
+        \end{itemize}
+        \end{minipage}
+\end{tabularx}
 %----------------------------------------------------------------------------------------
 %	SKILLS
 %----------------------------------------------------------------------------------------
 \section{Skills}
-\begin{tabularx}{\linewidth}{@{}l X@{}}
-C++ programing language, Qt, and modern C++.
-& \normalsize{Professional level at C++, experienced developer with Qt.} \\
-Deep learning and NLP, transformer models especially.
-& \normalsize{I have experience in Deep learning and NLP research.} \\
-Python programing language and pytorch, tensorflow, jax.
-& \normalsize{I am professional at python and I have worked with deep learning frameworks a lot.} \\
+\begin{tabularx}{\linewidth}{@{}l}
+\begin{minipage}[t]{\linewidth}
+\begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
+    \item[-] Modern C++, Python, Qt, and embedded systems.
+    \item[-] Deep learning and NLP, transformer models especially.
+    \item[-] Master the theoretical basis of computer science, the underlying principles of computers and a good foundation of algorithms and data structures.
+    \item[-] Possess good documentation and engineering practice habits, and are willing to cooperate, communicate and discuss with others.
+\end{itemize}
+\end{minipage}
 \end{tabularx}
 
 \vfill
