--- a/cv-one-page.tex
+++ b/cv-one-page.tex
@@ -118,14 +118,7 @@
 % \raisebox{-0.00\height}\faLinkedin\ username \ | \ \raisebox{-0.05\height}\faGlobe \ mysite.com  & \hfill \emoji{calling} number
 % \end{tabularx}
 
-\begin{tabularx}{\linewidth}{@{} C @{}}
-\Huge{zhuwenq} \\[7.5pt]
-\href{https://github.com/leonezz}{\raisebox{-0.05\height}\faGithub\ Leonezz} \ $|$ \  
-\href{https://zhuwenq-blog.netlify.app}{\raisebox{-0.05\height}\faGlobe \ Blog} \ $|$ \ 
-\href{mailto:zhuwenqa@outlook.com}{\raisebox{-0.05\height}\faEnvelope \ zhuwenqa@outlook.com} \ $|$ \ 
-\href{tel:+8618551713651}{\raisebox{-0.05\height}\faMobile \ +86 18551713651} \ $|$ \
-\raisebox{-0.05\height}\faUserCircle \ Software Engineer \\
-\end{tabularx}
+\input{header.tex}
 %----------------------------------------------------------------------------------------
 %	EDUCATION
 %----------------------------------------------------------------------------------------
@@ -141,12 +134,12 @@
 \section{Project Experience}
 
 \begin{tabularx}{\linewidth}{ @{}X@{}  }
-\textbf{A Measuring System of Metal Surface Flatness Based on Electromagnetic Induction Principle} as \textit{Creator and maintainer}.
+\textbf{A Measuring System of Metal Surface Flatness Based on Electromagnetic Induction Principle} (Embedded System) as \textit{Creator and maintainer}.
 \signed{Sept. 2018 - Nov. 2018}\\[3.75pt]
 \begin{minipage}[t]{\linewidth}
     \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
-        \item[-] We designed a tiny PCB coil as an electromagnetic sensor and power it with a dedicated IC.
-        \item[-] The dedicated chip collect the electromagnetic impedance value between the coil sensor and the surface of the object
+        \item[-] We designed a tiny electromagnetic sensor and power it with a dedicated IC.
+        \item[-] The sensor collects the electromagnetic impedance value between the coil sensor and the surface of the object
         to be tested, and encode the value into digital data.
         \item[-] Also note this system is implemented with a 2-axis moving platform powered by G-code thus it is able to scan a surface automatically.
     \end{itemize}
@@ -154,7 +147,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} as \textit{Creator and maintainer}.
+    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} (Embedded System) as \textit{Creator and maintainer}.
     \signed{Jun. 2019 - Dec. 2019} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -168,7 +161,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \textbf{An embedded system for smart trash bin} as \textit{Creator and maintainer}.
+    \textbf{An embedded system for smart trash bin} (Embedded Systems) as \textit{Creator and maintainer}.
     \signed{Dec. 2020 - May 2021} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
