fix page limit exceeding

--- a/cv.tex
+++ b/cv.tex
@@ -183,7 +183,7 @@ my interests include modern C++, embedded systems, advanced deep learning techni
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \textbf{An embedded system for smart trash bin} (Embedded System) as \textit{Creator and maintainer}.
+    \textbf{An embedded system for smart trash bin} as \textit{Creator and maintainer}.
     \signed{Dec. 2020 - May 2021} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
