fix page limit exceeding

--- a/cv-one-page.tex
+++ b/cv-one-page.tex
@@ -147,7 +147,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} (Embedded System) as \textit{Creator and maintainer}.
+    \href{https://github.com/leonezz/OpenChart.git}{\textbf{OpenChart}} (Desktop Software) as \textit{Creator and maintainer}.
     \signed{Jun. 2019 - Dec. 2019} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
@@ -161,7 +161,7 @@
 \end{tabularx}
 
 \begin{tabularx}{\linewidth}{ @{}X@{} }
-    \textbf{An embedded system for smart trash bin} (Embedded Systems) as \textit{Creator and maintainer}.
+    \textbf{An embedded system for smart trash bin} as \textit{Creator and maintainer}.
     \signed{Dec. 2020 - May 2021} \\[3.75pt]
     \begin{minipage}[t]{\linewidth}
         \begin{itemize}[nosep,after=\strut, leftmargin=1em, itemsep=3pt]
